[gd_scene load_steps=20 format=2]

[ext_resource path="res://Prefab/Grid.tscn" type="PackedScene" id=1]
[ext_resource path="res://Script/World.gd" type="Script" id=2]
[ext_resource path="res://Script/Grid.gd" type="Script" id=3]
[ext_resource path="res://Prefab/SwipeDetector.tscn" type="PackedScene" id=4]
[ext_resource path="res://Asset/Roboto-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Asset/home.png" type="Texture" id=6]
[ext_resource path="res://Asset/right.png" type="Texture" id=7]
[ext_resource path="res://Asset/pause.png" type="Texture" id=8]
[ext_resource path="res://Asset/audioOn.png" type="Texture" id=9]
[ext_resource path="res://Asset/audioOff.png" type="Texture" id=10]
[ext_resource path="res://Asset/information.png" type="Texture" id=11]
[ext_resource path="res://admob.gd" type="Script" id=12]
[ext_resource path="res://Asset/Angels_Flying_Through_Hell_2020.ogg" type="AudioStream" id=13]
[ext_resource path="res://Asset/grey_panel.png" type="Texture" id=14]
[ext_resource path="res://Prefab/Clock.tscn" type="PackedScene" id=15]
[ext_resource path="res://Script/Ads.gd" type="Script" id=16]

[sub_resource type="Animation" id=1]
resource_name = "flash"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.12, 0.56, 1, 1 ), Color( 0.59375, 0.796875, 1, 1 ), Color( 0.12, 0.56, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.25, 1.25 ), Vector2( 1, 1 ) ]
}

[sub_resource type="DynamicFont" id=2]
size = 108
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
extra_spacing_space = 12
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 32
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
extra_spacing_space = 12
font_data = ExtResource( 5 )

[node name="World" type="Node"]
script = ExtResource( 2 )

[node name="SwipeDetector" parent="." instance=ExtResource( 4 )]
MAX_DIAGONAL_SLOPE = 1.25

[node name="Bg" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.890196, 0.862745, 0.54902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = 40.0
margin_right = -40.0
margin_bottom = -40.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 1014.0
margin_bottom = 1840.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 1014.0
margin_bottom = 500.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 2

[node name="Clock" parent="MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 15 )]
margin_right = 505.0
margin_bottom = 500.0
size_flags_horizontal = 7
size_flags_vertical = 3

[node name="Buttons" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 509.0
margin_right = 1014.0
margin_bottom = 500.0
rect_min_size = Vector2( 470, 0 )
rect_pivot_offset = Vector2( 235, 250 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ColorRect" type="ColorRect" parent="MarginContainer/VBoxContainer/HBoxContainer/Buttons"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 200, 100 )
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 0
color = Color( 0.121569, 0.188235, 0.109804, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer/Buttons/ColorRect"]
self_modulate = Color( 0.34902, 0.533333, 0.317647, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
rect_min_size = Vector2( 0, 80 )
texture = ExtResource( 14 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/Buttons/ColorRect/TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 80 )
size_flags_horizontal = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InfoBtn" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer/Buttons/ColorRect/TextureRect/VBoxContainer"]
pause_mode = 2
margin_right = 180.0
margin_bottom = 117.0
rect_min_size = Vector2( 80, 80 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 11 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioBtn" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer/Buttons/ColorRect/TextureRect/VBoxContainer"]
pause_mode = 2
margin_top = 121.0
margin_right = 180.0
margin_bottom = 238.0
rect_min_size = Vector2( 80, 80 )
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="MarginContainer/VBoxContainer/HBoxContainer/Buttons/ColorRect/TextureRect/VBoxContainer/AudioBtn"]
stream = ExtResource( 13 )

[node name="PauseBtn" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer/Buttons/ColorRect/TextureRect/VBoxContainer"]
pause_mode = 2
margin_top = 242.0
margin_right = 180.0
margin_bottom = 359.0
rect_min_size = Vector2( 80, 80 )
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RestartBtn" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer/Buttons/ColorRect/TextureRect/VBoxContainer"]
pause_mode = 2
self_modulate = Color( 0.12, 0.56, 1, 1 )
margin_top = 363.0
margin_right = 180.0
margin_bottom = 480.0
rect_min_size = Vector2( 80, 80 )
rect_pivot_offset = Vector2( 50, 50 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="MarginContainer/VBoxContainer/HBoxContainer/Buttons/ColorRect/TextureRect/VBoxContainer/RestartBtn"]
anims/flash = SubResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 504.0
margin_right = 1014.0
margin_bottom = 1518.0
rect_min_size = Vector2( 960, 960 )

[node name="ColorRect" type="ColorRect" parent="MarginContainer/VBoxContainer/CenterContainer"]
self_modulate = Color( 0.121569, 0.188235, 0.109804, 1 )
margin_right = 1014.0
margin_bottom = 1014.0
rect_min_size = Vector2( 1014, 1014 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/CenterContainer/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Grid" parent="MarginContainer/VBoxContainer/CenterContainer/ColorRect/MarginContainer" instance=ExtResource( 1 )]
margin_right = 994.0
margin_bottom = 994.0
script = ExtResource( 3 )

[node name="Overlay" type="ColorRect" parent="MarginContainer/VBoxContainer/CenterContainer"]
visible = false
margin_right = 1014.0
margin_bottom = 1014.0
rect_min_size = Vector2( 1014, 1014 )
color = Color( 0.0392157, 0.0392157, 0.0392157, 0.752941 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/CenterContainer/Overlay"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.7, 0.13, 0.13, 1 )
text = "Game Over"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InfoLabel" type="Label" parent="MarginContainer/VBoxContainer/CenterContainer/Overlay"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0.98, 0.6, 1 )
text = "HOW TO PLAY: 


Swipe the screen to move the tiles across the board.

When two tiles with the same number touch, they merge into one.

When one set of tiles reaches 2048 you win the game!"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ads" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 1522.0
margin_right = 1014.0
margin_bottom = 1840.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 16 )

[node name="DebugOut" type="RichTextLabel" parent="MarginContainer/VBoxContainer/Ads"]
margin_right = 250.0
margin_bottom = 318.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/default_color = Color( 0, 0, 0, 1 )

[node name="Reload" type="Button" parent="MarginContainer/VBoxContainer/Ads"]
margin_left = 254.0
margin_right = 504.0
margin_bottom = 318.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Reload"

[node name="Banner" type="Button" parent="MarginContainer/VBoxContainer/Ads"]
margin_left = 508.0
margin_right = 758.0
margin_bottom = 318.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
toggle_mode = true
text = "Banner"
expand_icon = true

[node name="Interstitial" type="Button" parent="MarginContainer/VBoxContainer/Ads"]
margin_left = 762.0
margin_right = 1014.0
margin_bottom = 318.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Interstitial"

[node name="AdMob" type="Node" parent="MarginContainer/VBoxContainer/Ads"]
script = ExtResource( 12 )
is_real = true
banner_id = "ca-app-pub-1712747660566158/2525673567"
interstitial_id = "ca-app-pub-1712747660566158/8888219160"
rewarded_id = "ca-app-pub-1712747660566158/2459059104"
max_ad_content_rate = "T"
[connection signal="swiped" from="SwipeDetector" to="." method="_on_SwipeDetector_swiped"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Buttons/ColorRect/TextureRect/VBoxContainer/InfoBtn" to="." method="_on_InfoBtn_pressed"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/HBoxContainer/Buttons/ColorRect/TextureRect/VBoxContainer/AudioBtn" to="." method="_on_AudioBtn_toggled"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/HBoxContainer/Buttons/ColorRect/TextureRect/VBoxContainer/PauseBtn" to="." method="_on_PauseBtn_toggled"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Buttons/ColorRect/TextureRect/VBoxContainer/RestartBtn" to="." method="_on_RestartBtn_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Ads/Reload" to="MarginContainer/VBoxContainer/Ads" method="_on_Reload_pressed"]
[connection signal="resized" from="MarginContainer/VBoxContainer/Ads/Banner" to="MarginContainer/VBoxContainer/Ads" method="_on_Banner_resized"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/Ads/Banner" to="MarginContainer/VBoxContainer/Ads" method="_on_Banner_toggled"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Ads/Interstitial" to="MarginContainer/VBoxContainer/Ads" method="_on_Interstitial_pressed"]
[connection signal="banner_failed_to_load" from="MarginContainer/VBoxContainer/Ads/AdMob" to="MarginContainer/VBoxContainer/Ads" method="_on_AdMob_banner_failed_to_load"]
[connection signal="banner_loaded" from="MarginContainer/VBoxContainer/Ads/AdMob" to="MarginContainer/VBoxContainer/Ads" method="_on_AdMob_banner_loaded"]
[connection signal="interstitial_closed" from="MarginContainer/VBoxContainer/Ads/AdMob" to="MarginContainer/VBoxContainer/Ads" method="_on_AdMob_interstitial_closed"]
[connection signal="interstitial_failed_to_load" from="MarginContainer/VBoxContainer/Ads/AdMob" to="MarginContainer/VBoxContainer/Ads" method="_on_AdMob_interstitial_failed_to_load"]
[connection signal="interstitial_loaded" from="MarginContainer/VBoxContainer/Ads/AdMob" to="MarginContainer/VBoxContainer/Ads" method="_on_AdMob_interstitial_loaded"]
